chore: complete backend-first verification, swagger docs, and documentation sign-off